repo: add quality badge & add CI coverage reporter

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,8 +21,8 @@ jobs:
             - .yarn/cache
             - .yarn/unplugged
       - deploy:
-          name: Run unit tests
-          command: yarn test
+          name: Run unit tests and export coverage
+          command: yarn test --coverage && bash <(curl -Ls https://coverage.codacy.com/get.sh) report -r ./coverage/clover.xml
   compile:
     docker:
       - image: circleci/node:16
