feat: add ES support (w/ rollup)

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -17,6 +17,8 @@
   ],
   "rules": {},
   "ignorePatterns": [
-    "**/__tests__/**/*.test.ts"
+    "**/*.js",
+    "**/__tests__/**/*.test.ts",
+    "**/dist/**/*.d.ts"
   ]
 }
