--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,14 +1,18 @@
 {
   "compilerOptions": {
-    "module": "commonjs",
-    "target": "es2015",
     "declaration": true,
-    "outDir": "./dist"
+    "declarationDir": "./dist",
+    "module": "es6",
+    "moduleResolution": "node",
+    "noImplicitAny": true,
+    "outDir": "./dist",
+    "target": "es2015",
   },
   "include": [
     "src/**/*"
   ],
   "exclude": [
-    "__tests__/**/*"
+    "__tests__/**/*",
+    "node_modules"
   ]
 }
