--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "logical-gates-ts",
   "description": "A simple (zero-depths) library to try logical operators",
   "author": {
-    "name": "Benjamín Calisto",
+    "name": "Benjamin Calisto",
     "email": "be.calisto@protonmail.com"
   },
   "repository": {
@@ -20,7 +20,7 @@
   "scripts": {
     "release": "standard-version",
     "test": "jest",
-    "compile:pre": "rimraf dist/**/*",
+    "compile:pre": "node utils/pre-build.js",
     "compile": "rollup -c",
     "compile:post": "node utils/post-build.js",
     "build": "concurrently \"yarn compile:pre\" \"yarn compile\" \"yarn compile:post\" --max-processes 1 --raw",
@@ -46,6 +46,7 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^5.1.0",
     "jest": "^27.2.5",
+    "path": "^0.12.7",
     "rimraf": "^3.0.2",
     "rollup": "^2.58.0",
     "rollup-plugin-typescript2": "^0.30.0",
