--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,7 @@
   "compilerOptions": {
     "declaration": true,
     "declarationDir": "./dist",
+    "esModuleInterop": true,
     "module": "es6",
     "moduleResolution": "node",
     "noImplicitAny": true,
