--- a/package.json
+++ b/package.json
@@ -55,5 +55,8 @@
     "standard-version": "^9.3.2",
     "ts-jest": "^27.0.7",
     "typescript": "^4.5.2"
+  },
+  "volta": {
+    "node": "17.1.0"
   }
 }
